--- a/shoe.html
+++ b/shoe.html
@@ -10,25 +10,23 @@
   </head>
   <body>
     <div class="container_12">
-      <h3 class="a1 grid_6">Shoes.com</h3>
-      <img class="a2 grid_6" src="img/capture1.png">
+      <h3 class="a grid_6">Shoes.com</h3>
+      <img class="a2 grid_6" src="img/capture.png">
     </img>
   </img>
 </div>
 <div class="wrap container_12">
   <nav class="b1 grid_12">
-<ul>
-<li><a href="shoe1.html">Womens</a></li>
-<li><a href="shoe2.html">Mens</a></li>
+<ul style="list-style-type: none;">
+<li><a href="shoe1.html">Women</a></li>
+<li><a href="shoe2.html">Men</a></li>
 <li><a href="#">Kids</a></li>
 <li><a href="#">Brands</a></li>
 <li><a href="#">About</a></li>
-<li><a href="#">contactus</a></li>
+<li><a href="#">contact us</a></li>
 </ul>
 </nav>
 </div>
-
-
 <div class=" container_12">
   <img class="b3 grid_6" src="img/brand.jpg">
   <img class="b3 grid_6" src="img/brand1.jpg">
@@ -45,7 +43,7 @@
 </form>
       </section>
       <section class="s2 grid_6">
-        <h6>A little about us</h6>
+        <h4>A little about us</h4>
           <p>Some people have hobbies. We have shoes. At shoes.com, shoes aren't just a part of our name, they are our passion. Here you'll find an incredible selection of fashionable footwear from popular and premium labels. Each season, we are thrilled to offer you cutting-edge fashion from top brands including Steve Madden, UGGS, and the always fashionable Frye Boots.
 No matter your shoe needs, from dress shoes like pumps or oxfords, to athletic shoes like runners or cleats, or boots from ankle to knee-high, we've got you covered.
 </p>
@@ -71,7 +69,7 @@ No matter your shoe needs, from dress shoes like pumps or oxfords, to athletic s
   </img>
     <img class="a8 grid_3" src="img/b/9.jpg">
   </img>
-  <img class="a8 grid_3" src="img/b/10.jpg"><span style="cursor:pointer">view all brands</span>
+  <img class="a8 grid_3" src="img/b/10.jpg"><span style="cursor:pointer"><h4>view all brands</h4></span>
 </img>
   </div>
   <div class=" container_12">
@@ -81,6 +79,7 @@ No matter your shoe needs, from dress shoes like pumps or oxfords, to athletic s
 </img>
 </img>
   </div>
+</div>
   <div class=" container_12">
     <img class="v grid_4" src="img/n/travel_adventure.jpg">
      <img class="v grid_4" src="img/n/wedges.jpg">
@@ -89,7 +88,7 @@ No matter your shoe needs, from dress shoes like pumps or oxfords, to athletic s
 </img>
   </div>
     <div class="main clearfix">
-    <div class="wrap container_12">
+    <div class="rv container_12">
       <section class="c1 grid_4 alpha">
         <span style="cursor:pointer">  <h3>100s of brands</h3></span>
             <span style="cursor:pointer"><h5>All your favorite brands,all in one place</h5></span>
