--- a/shoe2.html
+++ b/shoe2.html
@@ -1,41 +1,48 @@
 <html>
  <head>
      <title>Men shoe collections</title>
-   <link rel="stylesheet" href="css/style2.css">
+   <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/reset.css">
    <link rel="stylesheet" href="css/text.css">
    <link rel="stylesheet" href="css/960_12_col.css">
     <link href='https://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
  </head>
- <body>
+ <body class="back1">
+   <nav class="b111"
+   <ul style="list-style-type: none;margin-left:30cm;">
+   <li><a href="shoe.html">Home</a></li>
+   <li><a href="shoe1.html">Women</a></li>
+ </ul>
+</nav>
      <div class="container_12">
-       <h1 class="r">Mens collections</h1>
-       <section class="a1 grid_5">
+       <h1 class="r11">Mens collections</h1>
+       <section class="a111 grid_5">
          <p>Shoes are the finishing touch on any outfit and it is important to complete a look with the perfect pair!</p>
        </section>
-       <img class="a2 grid_7" src="img/m/1.jpg">
+       <img class="a211 grid_7" src="img/m/1.jpg">
      </img>
    </div>
    <div class="container_12">
-     <div class="a3" >
-       <img src="http://i.stack.imgur.com/jGlzr.png" />
-        <img src="img/m/3.jpg" class="a4"/>
+     <div class="a311" >
+       <img src="http://i.stack.imgur.com/jGlzr.png" width="1380px" />
+        <img src="http://sc01.alicdn.com/kf/HTB1V1_gKVXXXXcaXXXXq6xXFXXXf/Leather-Slippers.jpg" class="a411"/>
         <div class="caption"<br>Words should be an intense pleasure, just as leather should be to a shoemaker.</br>
     </div>
 </div>
 <div class="container_12">
-  <img class="a8 grid_6" src="img/m/4.jpg">
+  <img class="a811 grid_6" src="img/m/4.jpg">
 </img>
-  <img class="a8 grid_6" src="img/m/5.jpg">
+  <img class="a811 grid_6" src="img/m/5.jpg">
 </img>
 </div>
-<h4 class="u">It isn't the mountain ahead that wears you out; it's the grain of sand in your shoe. </h4>
+<h4 class="u11">It isn't the mountain ahead that wears you out; it's the grain of sand in your shoe. </h4>
 <div class="container_12">
-  <img class="a8 grid_6" src="img/m/2.jpg">
+  <img class="a811 grid_6" src="img/m/2.jpg">
 </img>
-  <img class="a8 grid_6" src="img/m/6.jpg">
+  <img class="a811 grid_6" src="img/m/6.jpg">
 </img>
 </div>
 <div class=" container_12">
@@ -46,8 +53,7 @@
 </img>
 </div>
 <div class="container_12">
-  <img class="a9 grid_12" src="http://img.picturequotes.com/2/340/339947/even-if-youre-fat-one-thing-always-fits-shoes-quote-1.jpg">
+  <img class="circular grid_12" src="img/m/capture1.jpg">
 </img>
 </div>
-
 <html>
